<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/ll_1"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_3"
        app:layout_constraintTop_toBottomOf="@id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_"
            android:hint="@string/edt_ans_hint"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_4"
        app:layout_constraintTop_toBottomOf="@id/ll_3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_send"
            style="?android:buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:text="@string/btn_send_text"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_clr"
            style="?android:buttonBarButtonStyle"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_clr_text"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_5"

        app:layout_constraintTop_toBottomOf="@id/ll_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtV_res"
            android:hint="@string/txtV_res_text"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgV_btm_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/imgV_btm_2"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/imgV_btm_3"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
